# ai-hedge-fund

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml
logs/: error.log.2024-12-04  trading.log.2024-12-04
scripts/: install.bat
src/: .env  agents.py  base_agent.py  llm_config.py  logging_config.py  message_bus.py  server.py  tools.py  trading_system.py
src/static/: index.html
src/static/css/: styles.css
src/static/js/: app.js
