[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "AI-powered hedge fund using multi-agent architecture"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.55.3"
alpaca-py = "^0.13.6"
python-dotenv = "^1.0.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.20"
langgraph = "^0.0.11"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true