[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "AI-powered hedge fund with multi-agent architecture"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
websockets = "^11.0.2"
alpaca-trade-api = "^2.3.0"
openai = "^0.27.7"
langchain = "^0.0.350"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.21"
ollama = "^0.1.0"
python-dotenv = "^1.0.0"
pandas = "^2.2.0"
matplotlib = "^3.9.2"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true